[package]
name = "sparsevec"
description = "Compress vectors using row displacement"
version = "0.1.1"
edition = "2018"
authors = ["Lukas Diekmann <lukas.diekmann@gmail.com>"]
repository = "https://github.com/softdevteam/sparsevec/"
readme = "README.md"
# This should be "Apache-2.0 OR MIT OR UPL-1.0" but crates.io doesn't know about
# UPL-1.0.
license = "Apache-2.0 OR MIT"
categories = ["data-structures"]

[dependencies]
vob = { version="2.0", features=["serde"] }
packedvec = { version="1.0", features=["serde"] }
serde = { version="1.0", features=["derive"], optional=true }
num-traits = "0.2"

[dev-dependencies]
rand = "0.6"
