[package]
name = "sparsevec"
description = "Compress vectors using row displacement"
version = "0.2.2"
edition = "2018"
authors = ["Lukas Diekmann <lukas.diekmann@gmail.com>"]
repository = "https://github.com/softdevteam/sparsevec/"
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["data-structures"]

[features]
bincode = ["dep:bincode", "vob/bincode", "packedvec/bincode"]
serde = ["dep:serde", "vob/serde", "packedvec/serde"]

[dependencies]
vob = { version="3.0.4" }
packedvec = { version="1.2.5" }
serde = { version="1.0", features=["derive"], optional=true }
bincode = { version="2.0", features=["derive"], optional=true }
num-traits = "0.2"

[dev-dependencies]
rand = "0.8"
